inclusao da function teste2

--- a/javascript/funcoes_callback.html
+++ b/javascript/funcoes_callback.html
@@ -2,4 +2,8 @@
     function teste(){
         console.log('teste')
     }
+
+    function teste2(){
+        console.log('teste 2')
+    }
 </script>
